--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cloud_firestore: ^4.15.4
   firebase_storage: ^11.6.5
   image_picker: ^1.0.7
+  swipe_cards: ^2.0.0+1
 
 dev_dependencies:
   flutter_test:
